--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^6.7.5",
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.0",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-dropdown-picker": "^5.4.4",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-localization": "^2.3.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
