--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-elements": "^3.4.3",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-localization": "^2.3.1",
+    "react-native-maps": "^1.4.0",
+    "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.2.0"
