--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-swiper-flatlist": "^3.0.18",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
