--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@react-navigation/bottom-tabs": "^6.5.5",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
+    "axios": "^1.3.4",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.0",
+    "react-native-awesome-alerts": "^2.0.0",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-elements": "^3.4.3",
