--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-swiper-flatlist": "^3.0.18",
+    "react-native-switch": "^1.5.1",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
