--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -90,6 +90,11 @@ def reactNativeArchitectures() {
     return value ? value.split(",") : ["armeabi-v7a", "x86", "x86_64", "arm64-v8a"]
 }
 
+project.ext.react = [
+    entryFile: "index.js",
+    nodeExecutableAndArgs: ["node", "--max-old-space-size=8192"]
+]
+
 android {
     ndkVersion rootProject.ext.ndkVersion
 
