--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -90,12 +90,12 @@ def reactNativeArchitectures() {
     return value ? value.split(",") : ["armeabi-v7a", "x86", "x86_64", "arm64-v8a"]
 }
 
-project.ext.react = [
-    entryFile: "index.js",
-    nodeExecutableAndArgs: ["node", "--max-old-space-size=8192"]
-]
 
 android {
+    
+    dexOptions {
+    javaMaxHeapSize "4g" 
+            }
     ndkVersion rootProject.ext.ndkVersion
 
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -182,4 +182,8 @@ dependencies {
     }
 }
 
+project.ext.react = [
+    entryFile: "index.js",
+    nodeExecutableAndArgs: ["node", "--max-old-space-size=4096"]
+]
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
