--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.71.0",
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-country-picker-modal": "^2.0.0",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-elements": "^3.4.3",
     "react-native-geolocation-service": "^5.3.1",
@@ -28,6 +29,7 @@
     "react-native-localization": "^2.3.1",
     "react-native-maps": "^1.4.0",
     "react-native-ratings": "^8.1.0",
+    "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-swiper-flatlist": "^3.0.18",
