--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.0",
     "@react-native-community/datetimepicker": "^6.7.5",
+    "@react-native-firebase/app": "^18.0.0",
+    "@react-native-firebase/storage": "^18.0.0",
     "@react-navigation/bottom-tabs": "^6.5.5",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
@@ -27,8 +29,11 @@
     "react-native-elements": "^3.4.3",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-image-crop-picker": "^0.40.0",
     "react-native-localization": "^2.3.1",
     "react-native-maps": "^1.4.0",
+    "react-native-onesignal": "^4.5.1",
+    "react-native-permissions": "^3.8.0",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.4.1",
@@ -52,6 +57,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.5",
     "prettier": "^2.4.1",
+    "react-native-dotenv": "^3.4.8",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
